fixed up a bunch of lint warnings.